// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component displays correctly when the user is signed in. 1`] = `
<nav
  className="navigation"
>
  <p
    className="navigation-logo"
  >
    Screenshot Gallery
  </p>
  <ul
    className="navigation-links"
  >
    <li
      onClick={[Function]}
    >
      Sign Out
    </li>
  </ul>
</nav>
`;

exports[`Navigation component displays correctly when the user is signed out. 1`] = `
<nav
  className="navigation"
>
  <p
    className="navigation-logo"
  >
    Screenshot Gallery
  </p>
  <ul
    className="navigation-links"
  >
    <li
      onClick={[Function]}
    >
      Sign In
    </li>
    <li
      onClick={[Function]}
    >
      Register
    </li>
  </ul>
</nav>
`;
